docs: fix homepage on mobile

--- a/docs-shared/src/styles/hope-logo.scss
+++ b/docs-shared/src/styles/hope-logo.scss
@@ -1,11 +1,6 @@
 #hero-logo {
-  width: 300px;
-  height: 300px;
   margin: 0 auto;
-
   outline: none;
-
   opacity: 0;
-
   transition: opacity 1s ease;
 }
